[package]
name = "basic-auth-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
envy = "0.4.2"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
openidconnect = "4.0.1"
quick_cache = "0.6.14"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "net", "rt", "rt-multi-thread", "tokio-macros"] }
